added to init.sql

--- a/App/views/driver/driverhomepage.ejs
+++ b/App/views/driver/driverhomepage.ejs
@@ -29,9 +29,12 @@
     <p id = "date" style = "font-weight:bold"></p>
     <p style = "font-style:italic">Home Page for Delivery Riders</p>
     <li><a href="/viewSalary/<%= uid%>">View Salary</a></li>
-    <li><a href="/viewWorkSchedules/<%= uid%>"></a>View Work Schedules</li>
-    <li>View Past Orders Delivered</li> 
-    <!-- inside view past deliveries show them number of hours worked -->
+    <li><a href="/viewWorkSchedule/<%= uid%>"></a>View Work Schedule</li>
+    <!-- total number of hours worked, number of orders delivered this week/month -->
+    <li>View Summary Information</li> 
+    <!-- view order allocated to him & all the buttons to press to post 
+    the timestamp of all the delivery times to the database  -->
+    <li>Manage Orders Assigned</li> 
   </body>
 
 <script>
