--- a/App/views/drivers.ejs
+++ b/App/views/drivers.ejs
@@ -22,7 +22,7 @@
 					<th scope="col">Name</th>
 					<th scope="col">Username</th>
                     <th scope="col">Password</th>
-                    <th scope="col">Salary</th>
+                    <th scope="col">Base Salary</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -31,7 +31,8 @@
 					<td><%= data[i].uid%></td>
 					<td><%= data[i].name%></td>
                     <td><%= data[i].username%></td>
-                    <td><%= data[i].password%></td>
+					<td><%= data[i].password%></td>
+				    <td><%= data[i].salary%></td>
 				</tr>
 				<% } %>
 			</tbody>
