--- a/App/views/driver/viewWorkSchedule.ejs
+++ b/App/views/driver/viewWorkSchedule.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Page Title -->
-    <title>View Salary</title>
+    <title>View Work Schedule</title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
 
     <!-- CSS for Styling -->
@@ -27,12 +27,7 @@
 
     <h1><%= title%></h1>
     <p id = "date" style = "font-weight:bold"></p>
-    <p>Your Base Salary: <%= data[0].salary%></p>
-    <p>Sign Up Date: <%=data[0].day%>/<%= data[0].month%>/<%= data[0].year%></p>
-    <p>Total Commission from Orders: <%=data[0].sumcommission%></p>
-    <p>Total Salary: <%=totalsalary%></p>
     
-    <button onclick="goBack()" style="padding: 0; border: none; background: none; cursor:pointer; color:blue">Back</button>
 </body>
 
 <script>
@@ -42,9 +37,6 @@
     d = today.getDate();
     document.getElementById("date").innerHTML = "Today's date is: " + d + "/" + m + "/" + y;
 
-    function goBack() {
-        window.history.back();
-    }
 </script>
 
 </html>
