driver work schedule, shifts

--- a/App/views/driver/driverhomepage.ejs
+++ b/App/views/driver/driverhomepage.ejs
@@ -29,7 +29,7 @@
     <p id = "date" style = "font-weight:bold"></p>
     <p style = "font-style:italic">Home Page for Delivery Riders</p>
     <li><a href="/viewSalary/<%= uid%>">View Salary</a></li>
-    <li><a href="/viewWorkSchedule/<%= uid%>"></a>View Work Schedule</li>
+    <li><a href="/viewWorkSchedule/<%= uid%>">View Work Schedule</a></li>
     <!-- total number of hours worked, number of orders delivered this week/month -->
     <li>View Summary Information</li> 
     <!-- view order allocated to him & all the buttons to press to post 
