--- a/App/views/driver/viewWorkSchedule.ejs
+++ b/App/views/driver/viewWorkSchedule.ejs
@@ -27,7 +27,24 @@
 
     <h1><%= title%></h1>
     <p id = "date" style = "font-weight:bold"></p>
-    
+	<table class="table">
+		<thead>
+			<tr>
+                <th scope="col">Weekly Work Schedule ID</th>
+                <th scope="col">First Day of Week</th>  
+			</tr>
+		</thead>
+		<tbody>
+			<% for(var i=0; i<data.length; i++) { %>
+			<tr>
+                <td><%= data[i].wwsid%></td>
+                <td><%= data[i].startdate%></td>
+                <td><a href="/viewShifts2/<%= uid%>">View Shifts</a></td>
+			</tr>
+			<% } %>
+		</tbody>
+	</table>
+    <button onclick="goBack()" style="padding: 0; border: none; background: none; cursor:pointer; color:blue">Back</button>
 </body>
 
 <script>
@@ -37,6 +54,9 @@
     d = today.getDate();
     document.getElementById("date").innerHTML = "Today's date is: " + d + "/" + m + "/" + y;
 
+    function goBack() {
+        window.history.back();
+    }
 </script>
 
 </html>
