--- a/App/views/driver/driverhomepage.ejs
+++ b/App/views/driver/driverhomepage.ejs
@@ -31,7 +31,7 @@
     <li><a href="/viewSalary/<%= uid%>">View Salary</a></li>
     <li><a href="/viewWorkSchedule/<%= uid%>">View Work Schedule</a></li>
     <!-- total number of hours worked, number of orders delivered this week/month -->
-    <li>View Summary Information</li> 
+    <li><a href="/viewDriverSummaryInfo/<%= uid%>">View Summary Information</a></li> 
     <!-- view order allocated to him & all the buttons to press to post 
     the timestamp of all the delivery times to the database  -->
     <li>Manage Orders Assigned</li> 
