--- a/App/views/driver/viewDriverSummaryInfo.ejs
+++ b/App/views/driver/viewDriverSummaryInfo.ejs
@@ -23,12 +23,35 @@
 </head>
 
 <body>
-	<h1><%= title%></h1>
+    <h1><%= title%></h1>
+    <p id = "date" style = "font-weight:bold"></p>
+    <%var totalhours = 0 %>
+    <%for (var i = 0; i < data.length; i++) {%> 
+        <%totalhours += ((data[i].endtime - data[i].starttime)/100)%>
+    <%}%>
+    <p>Total hours worked since joining: <%= totalhours%></p>
 
+    <%var today = new Date() %>
+    <%var tdyMth = today.getMonth()+1 %>
+    <%var numOrders = 0 %>
+    <%for (var j = 0; j < data.length; j++) {%> 
+        <% if (data[j].month = tdyMth) {%>
+            <%numOrders++%>
+        <%}%>
+    <%}%>
+    <p>Number of Orders Delivered this month: <%=numOrders%></p>
     <button onclick="goBack()" style="padding: 0; border: none; background: none; cursor:pointer; color:blue">Back</button>
 </body>
 
 <script>
+
+var today =  new Date();
+    y = today.getFullYear();
+    d = today.getDate();
+    var months    = ['January','February','March','April','May','June','July','August','September','October','November','December'];
+    var thisMonth = months[today.getMonth()]; //
+    document.getElementById("date").innerHTML = "Today's date is: " + d + " " + thisMonth + ", " + y;
+
     function goBack() {
         window.history.back();
     }
