Creating wws added

--- a/App/views/fdsmanager/shiftmanagement.ejs
+++ b/App/views/fdsmanager/shiftmanagement.ejs
@@ -25,16 +25,19 @@
 <body>
     <h1>Shift Management Page</h1>
     <li><a href="/addshift">Create a new Shift</a></li>
+    <li><a href="/addwws">Generate a new WWS</a></li>
+    <li><a href="/viewwws">View all WWS</a></li>
     
     <form id="html_form" action="viewshifts" role="form" method="post">
         <div class="form-group">
             <label for="date">Date</label>
-            <input type="text" class="form-control" id="date" name="date" aria-describedby="userIdHelp"
+            <input type="text" class="form-control" id="date" name="date" aria-describedby="userIdHelp" 
                 placeholder="Enter Date to manage shifts">
             <small id="matricHelp" class="form-text text-muted"></small>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
 
     <h2>All Shifts created</h2>
     <table class="table">
