--- a/App/views/driver/driverhomepage.ejs
+++ b/App/views/driver/driverhomepage.ejs
@@ -34,7 +34,7 @@
     <li><a href="/viewDriverSummaryInfo/<%= uid%>">View Summary Information</a></li> 
     <!-- view order allocated to him & all the buttons to press to post 
     the timestamp of all the delivery times to the database  -->
-    <li>Manage Orders Assigned</li> 
+    <li><a href="/manageOrdersAssigned/<%=uid%>">Manage Orders Assigned</a></li> 
   </body>
 
 <script>
