--- a/App/views/fdsmanager/addshift.ejs
+++ b/App/views/fdsmanager/addshift.ejs
@@ -17,7 +17,7 @@
 		<script src="javascripts/insertScript.js"></script>
   </head>
   <body>
-    <h1><%= title%></h1>
+    <h1><%= title%> <%= date%></h1>
 		<form id="html_form" action="addshift" role="form" method="post">
 			<div class="form-group">
 				<label for="sid">Shift ID</label>
@@ -41,9 +41,12 @@
 				<input type="number" class="form-control" id="endtime" name="endtime" placeholder="Enter End Time">
 			</div>
 			<div class="form-group">
+				<input type="hidden" class="form-control" id="date" name="date" value="<%= date%>">
+			</div>
+			<!-- <div class="form-group">
 				<label for="date">Date</label>
 				<input type="text" class="form-control" id="date" name="date" placeholder="Date">
-			</div>
+			</div> -->
 			<button type="submit" class="btn btn-primary">Submit</button>
         </form>
 		
