--- a/App/views/fdsmanager/wwsdetail.ejs
+++ b/App/views/fdsmanager/wwsdetail.ejs
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-	<form id="addshift" action="viewshifts" method="post">
+	<form id="addshift" action="wwsdetail" method="post">
 		<input type="hidden" name="date" value="<%= date%>"> 
 		<!-- small problem here because when viewing all shifts, title is passed over instead -->
 		<button type="submit" class="btn btn-primary">Create New Shift</button>
@@ -35,7 +35,7 @@ shit but then the post method is alraedy used to create the shift ? unless i mak
 i think answer is to pass this date into some post method somewhere, then render and pass the date into that form. pass that date into 
 the form, so that user doesnt have to input the date and can just directly use that date in the form, we do something -->
 
-	<h1>Shifts on <%= date%></h1>
+	<h1>Shifts on Week of <%= date%></h1>
 	<table class="table">
 		<thead>
 			<tr>
