--- a/App/views/fdsmanager/addshift.ejs
+++ b/App/views/fdsmanager/addshift.ejs
@@ -17,20 +17,24 @@
 		<script src="javascripts/insertScript.js"></script>
   </head>
   <body>
-    <h1><%= title%> <%= date%></h1>
+    <h1><%= title%> <%= firstdayofweek%></h1>
 		<form id="html_form" action="addshift" role="form" method="post">
 			<div class="form-group">
 				<label for="sid">Shift ID</label>
 				<input type="text" class="form-control" id="sid" name="sid" aria-describedby="userIdHelp" placeholder="Enter Shift ID">
 				<small id="matricHelp" class="form-text text-muted"></small>
 			</div>
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<label for="wwsid">WWS ID</label>
 				<input type="text" class="form-control" id="wwsid" name="wwsid" placeholder="Enter Weekly Schedule ID from 2">
-            </div>
+            </div> -->
             <div class="form-group">
 				<label for="uid">Driver ID</label>
 				<input type="text" class="form-control" id="uid" name="uid" placeholder="Enter Driver ID">
+			</div>
+			<div class="form-group">
+				<label for="date">Shift Date</label>
+				<input type="text" class="form-control" id="date" name="date" placeholder="Enter Shift Date">
 			</div>
 			<div class="form-group">
 				<label for="starttime">Start Time </label>
@@ -41,7 +45,7 @@
 				<input type="number" class="form-control" id="endtime" name="endtime" placeholder="Enter End Time">
 			</div>
 			<div class="form-group">
-				<input type="hidden" class="form-control" id="date" name="date" value="<%= date%>">
+				<input type="hidden" class="form-control" id="firstdayofweek" name="firstdayofweek" value="<%= firstdayofweek%>">
 			</div>
 			<!-- <div class="form-group">
 				<label for="date">Date</label>
