--- a/App/views/restaurantstaffindex.ejs
+++ b/App/views/restaurantstaffindex.ejs
@@ -29,8 +29,9 @@
       <li><a href="/deleteRestaurantFoodItem/<%= rid%>">Delete a restaurant food item</a></li>
       <li><a href="/viewAllOrders/<%= rid%>">View all orders</a></li>
       <li><a href="/summaryInfo/<%= rid%>">Summary Information</a></li>
-      <!--<li><a href="/select">View All Users</a></li>
-      <li><a href="/drivers">View All Drivers</a></li>-->
+      <li><a href="/addRestaurantPromotion/<%= rid%>">Add a new restaurant promotion</a></li>
+      <li><a href="/viewRestaurantPromotions/<%= rid%>">View all restaurant promotions</a></li>
+  
     </div>
     
     <!--extra right column for fun-->
