--- a/App/views/restaurantstaffindex.ejs
+++ b/App/views/restaurantstaffindex.ejs
@@ -31,12 +31,13 @@
       <li><a href="/summaryInfo/<%= rid%>">Summary Information</a></li>
       <li><a href="/addRestaurantPromotion/<%= rid%>">Add a new restaurant promotion</a></li>
       <li><a href="/viewRestaurantPromotions/<%= rid%>">View all restaurant promotions</a></li>
+      <li><a href="/deleteRestaurantPromotion/<%= rid%>">Delete a restaurant promotion</a></li>
   
     </div>
     
     <!--extra right column for fun-->
-    <div style="width: 330px;height:430px;float:right;">
-    <img src="https://bit.ly/2102meme">
+    <div style="width:500px;height:430px;float:right;">
+    <img src="https://bit.ly/2102meme1"style="width:500px;height:430px">
     </div>
 
     <!--footer-->
