--- a/App/views/restaurantstaffindex.ejs
+++ b/App/views/restaurantstaffindex.ejs
@@ -32,6 +32,7 @@
       <li><a href="/addRestaurantPromotion/<%= rid%>">Add a new restaurant promotion</a></li>
       <li><a href="/viewRestaurantPromotions/<%= rid%>">View all restaurant promotions</a></li>
       <li><a href="/deleteRestaurantPromotion/<%= rid%>">Delete a restaurant promotion</a></li>
+      <li><a href="/summaryInfoPromotion/<%= rid%>">Summary Promotion Information</a></li>
   
     </div>
     
