--- a/App/views/fdsmanager/fdsmanagerhomepage.ejs
+++ b/App/views/fdsmanager/fdsmanagerhomepage.ejs
@@ -24,10 +24,12 @@
     <li><a href="/fdsone">FDS Manager Summary One</a></li>
     <li><a href="/fdstwo">FDS Manager Summary Two</a></li>
     <li><a href="/fdsthree">FDS Manager Summary Three</a></li>
+    <li><a href="/fdsfour">FDS Manager Summary Four</a></li>
 
     <li><a href="/restaurants" >View All Restaurants</a></li>
     <li><a href="/drivers">View All Drivers</a></li>
     <li><a href="/unassignedorders">View All Unassigned Orders</a></li>
+    
 
     <p>4. I guess let Manager choose (1) specific month, and (2) specific rider then all info comes out. Do i need to do a rider view / month view?</p>
     <p>Add driver, CRUD restaurant and restaurantstaff</p>
