--- a/App/views/fdsmanager/fdsfour.ejs
+++ b/App/views/fdsmanager/fdsfour.ejs
@@ -24,7 +24,7 @@
 
 <body>
 	<h1><%= title%></h1>
-	<form id="html_form" action="choosedate" role="form" method="post">
+	<form id="html_form" action="fdsfour" role="form" method="post">
 		<div class="form-group">
 			Choose Month:  
 		   <select name ="month" id ="month">
