--- a/App/views/fdsmanager/summaryfour.ejs
+++ b/App/views/fdsmanager/summaryfour.ejs
@@ -36,16 +36,14 @@
             </tr>
         </thead>
         <tbody>
-            <% for(var i=0; i<data.length; i++) { %>
             <tr>
-                <td><%= month%></td>
-                <td><%= year%></td>
-                <td><%= data[i].name</td>
-                <td><%= data[i].totalorders</td>
-                <td><%= data[i].totaldeliverytime/data[i].totalorders%></td>
-                <td><%= data[i].totalRatings/data[i].totalorders%></td>
+                <td><%= data[0]%></td>
+                <td><%= data[1]%></td>
+                <td><%= data[2]%></td>
+                <td><%= data[3]%></td>
+                <td><%= data[4]/data[3]%></td>
+                <td><%= data[5]/data[3]%></td>
             </tr>
-            <% } %>
         </tbody>
     </table>
 </body>
