PT schedule done

--- a/App/views/fdsmanager/shiftmanagement.ejs
+++ b/App/views/fdsmanager/shiftmanagement.ejs
@@ -25,7 +25,8 @@
 <body>
     <h1>Shift Management Page</h1>
     <li><a href="/adddriverwws">Generate a WWS for a FT Driver</a></li>
-    <h6>Generate WWS for a PT Driver</h6>
+    <li><a href="/addptwws">Generate a WWS for a PT Driver</a></li>
+ 
     <h6>Add Shift to existing schedule</h6>
     <h6>Check for scheduling violations</h6>
 
