--- a/App/views/restaurantstaffindex.ejs
+++ b/App/views/restaurantstaffindex.ejs
@@ -23,7 +23,7 @@
 
       <!--main content-->
     <div style="height:430px; width:60%; float: left">
-      <h4>Welcome Back <%= name%></h4>
+      <h4>Welcome Back <%= name%><%= rid%></h4> 
       <li><a href="/addRestaurantFoodItem/<%= rid%>"> Add a new restaurant food item</a></li>
       <li><a href="/viewFoodItems/<%= rid%>">View all food items</a></li>
       <li><a href="/deleteRestaurantFoodItem/<%= rid%>">Delete a restaurant food item</a></li>
