--- a/App/views/summaryInfo.ejs
+++ b/App/views/summaryInfo.ejs
@@ -25,6 +25,7 @@
 <body>
 	<h1><%= title%></h1>
 	<form id="html_form" action="summaryInfo" role="form" method="post">
+		<input type="hidden" name="id" value="<%= id%>">
 		<div class="form-group">
 			Choose Month:  
 		   <select name ="month" id ="month">
