--- a/App/views/addRestaurantFoodItem.ejs
+++ b/App/views/addRestaurantFoodItem.ejs
@@ -21,13 +21,13 @@
 	<p></p>
 		<form id="html_form" action="addRestaurantFoodItem" role="form" method="post">
 			<div class="form-group">
-				Choose the food category:  
-			   <select name ="cid" id ="cid">
-				   <option value="1">Fast Food</option>
-				   <option value="2">Western Food</option>
-				   <option value="3">Chinese Food</option>
+				From Which Category:
+				<select name="cid" id="cid">
+				  <% for(var i=0; i<categories.length; i++) { %>
+				  <option value=<%=categories[i].cid%>> <%=categories[i].name%> </option>
+				  <% } %>
 				</select>
-			</div>
+			  </div>
 			<div class="form-group">
 				<label for="foodName">Food Item Name:</label>
 				<input type="text" class="form-control" id="foodName" name="foodName" placeholder="Enter the food name">
@@ -45,13 +45,13 @@
 											<input type="radio" name="availability" id= "availability" value="False"/> False
             </div>
             <div class="form-group">
-				From which Restaurant:  
-			   <select name ="rid" id ="rid">
-				   <option value="1">MacDonald</option>
-				   <option value="2">KFC</option>
-				   <option value="3">Burger King</option>
+				From Which Restaurant:
+				<select name="rid" id="rid">
+				  <% for(var i=0; i<restaurants.length; i++) { %>
+				  <option value=<%=restaurants[i].rid%>> <%=restaurants[i].name%> </option>
+				  <% } %>
 				</select>
-			</div>
+			  </div>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 		
