--- a/App/views/fdsmanager/fdsfour.ejs
+++ b/App/views/fdsmanager/fdsfour.ejs
@@ -53,10 +53,14 @@
 			   <option value="2019">2019</option>
 			   <option value="2020">2020</option>
 			</select>
-        <div class="form-group">
-				<label for="rider">Rider Name:</label>
-				<input type="text" class="form-control" id="rider" name="rider" placeholder="Enter the Driver's name">
-	    </div>
+			<div class="form-group">
+				Driver:
+				<select name="uid" id="uid">
+				  <% for(var i=0; i<drivers.length; i++) { %>
+				  <option value=<%=drivers[i].uid%>> <%=drivers[i].name%> </option>
+				  <% } %>
+				</select>
+			  </div>
         
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
