--- a/App/views/fdsmanager/summaryfour.ejs
+++ b/App/views/fdsmanager/summaryfour.ejs
@@ -29,21 +29,25 @@
             <tr>
                 <th scope="col">Month</th>
                 <th scope="col">Year</th>
-                <th scope="col">Rider</th>
-                <th scope="col">Total Number of Orders Delivered</th>
-                <th scope="col">Average Delivery Time</th> 
-                <th scope="col">Average Rating</th> 
+                <th scope="col">Driver</th>
+                <th scope="col">Total Orders</th>
+                <th scope="col">Average Delivery Time(in Minutes)</th>
+                <th scope="col">Average Rating</th>
+                <th scope="col">Total Salary</th>
             </tr>
         </thead>
         <tbody>
+            <% for(var i=0; i<data.length; i++) { %>
             <tr>
-                <td><%= data[0]%></td>
-                <td><%= data[1]%></td>
-                <td><%= data[2]%></td>
-                <td><%= data[3]%></td>
-                <td><%= data[4]/data[3]%></td>
-                <td><%= data[5]/data[3]%></td>
+                <td><%= month%></td>
+                <td><%= year%></td>
+                <td><%= data[i].name%></td>
+                <td><%= data[i].totalorders%></td>
+                <td><%= (data[i].sum/60)/data[i].totalorders%></td>
+                <td><%= data[i].totalrating/data[i].totalorders%></td>
+                <td><%= totalsalary%></td>
             </tr>
+            <% } %>
         </tbody>
     </table>
 </body>
