--- a/App/views/login/loginrestaurantstaff.ejs
+++ b/App/views/login/loginrestaurantstaff.ejs
@@ -35,13 +35,13 @@
             <input type="text" class="form-control" id="password" name="password" placeholder="Enter your password">
         </div>
         <div class="form-group">
-            Working at:  
-           <select name ="rid" id ="rid">
-               <option value="1">MacDonald</option>
-               <option value="2">KFC</option>
-               <option value="3">Burger King</option>
+            Working At:
+            <select name="rid" id="rid">
+              <% for(var i=0; i<restaurants.length; i++) { %>
+                <option value=<%=restaurants[i].rid%>> <%=restaurants[i].name%> </option>
+              <% } %>
             </select>
-        </div>
+          </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
