--- a/App/views/summaryInfo2.ejs
+++ b/App/views/summaryInfo2.ejs
@@ -31,17 +31,31 @@
                 <th scope="col">Year</th>
 				<th scope="col">Total Number of Orders</th>
 				<th scope="col">Total Cost(excluding delivery fees)</th>
-				<th scope="col">Top 5 favorite food items</th>
 			</tr>
 		</thead>
 		<tbody>
+			<% for(var i=0; i<data.length; i++) { %>
 			<tr>
-                <td><%= data[0]%></td>
-                <td><%= data[1]%></td>
-				<td><%= data[2]%></td>
-				<td><%= data[3]%></td>
-				<td><%= data[4]%></td>>
+                <td><%= month%></td>
+                <td><%= year%></td>
+				<td><%= data[i].totalorders%></td>
+				<td><%= data[i].totalcost%></td>
 			</tr>
+			<% } %>
+		</tbody>
+	</table>
+	<table class="table">
+		<thead>
+			<tr>
+                <th scope="col">Top 5 Food Items</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% for(var i=0; i<top5food.length; i++) { %>
+			<tr>
+				<td><%= top5food[i].name%></td>
+			</tr>
+			<% } %>
 		</tbody>
 	</table>
 </body>
