--- a/App/views/fdsmanager/addshift.ejs
+++ b/App/views/fdsmanager/addshift.ejs
@@ -1,68 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-		<!-- Page Title -->
-    <title>CS2102 Modifying Database</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-		
-		<!-- CSS for Styling -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-		
-		<!-- JavaScript for Interactivity -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-		<!-- ADDED JavaScript -->
-		<script src="javascripts/insertScript.js"></script>
-  </head>
-  <body>
-    <h1><%= title%> <%= firstdayofweek%></h1>
-		<form id="html_form" action="addshift" role="form" method="post">
-			<div class="form-group">
-				<label for="sid">Shift ID</label>
-				<input type="text" class="form-control" id="sid" name="sid" aria-describedby="userIdHelp" placeholder="Enter Shift ID">
-				<small id="matricHelp" class="form-text text-muted"></small>
-			</div>
-			<!-- <div class="form-group">
+<head>
+	<!-- Page Title -->
+	<title>CS2102 Modifying Database</title>
+	<link rel='stylesheet' href='/stylesheets/style.css' />
+
+	<!-- CSS for Styling -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+	<!-- JavaScript for Interactivity -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+		crossorigin="anonymous"></script>
+
+	<!-- ADDED JavaScript -->
+	<script src="javascripts/insertScript.js"></script>
+</head>
+
+<body>
+	<h1><%= title%> <%= firstdayofweek%></h1>
+	<h1><%= errormessage%></h1>
+	<form id="html_form" action="addshift" role="form" method="post">
+		<div class="form-group">
+			Driver
+			<select name="wwsid" id="wwsid">
+				<% for(var i=0; i<drivers.length; i++) { %>
+				<option value=<%= drivers[i].wwsid%>><%= drivers[i].name%></option>
+				<% } %>
+			</select>
+		</div>
+
+		<div class="form-group">
+			Shift Date
+			<select name="date" id="date">
+				<% for(var i=0; i<days.length; i++) { %>
+				<option value=<%=i%>><%= dates[i]%> <%=days[i]%></option>
+				<% } %>
+			</select>
+		</div>
+
+		<div class="form-group">
+			<label for="sid">Shift ID</label>
+			<input type="text" class="form-control" id="sid" name="sid" aria-describedby="userIdHelp"
+				placeholder="Enter Shift ID">
+			<small id="matricHelp" class="form-text text-muted"></small>
+		</div>
+		<!-- <div class="form-group">
 				<label for="wwsid">WWS ID</label>
 				<input type="text" class="form-control" id="wwsid" name="wwsid" placeholder="Enter Weekly Schedule ID from 2">
             </div> -->
-            <div class="form-group">
-				<label for="uid">Driver ID</label>
-				<input type="text" class="form-control" id="uid" name="uid" placeholder="Enter Driver ID">
-			</div>
-			<div class="form-group">
-				<label for="date">Shift Date</label>
-				<input type="text" class="form-control" id="date" name="date" placeholder="Enter Shift Date">
-			</div>
-			<div class="form-group">
-				<label for="starttime">Start Time </label>
-				<input type="number" class="form-control" id="starttime" name="starttime" placeholder="Enter Start Time">
-            </div>
-            <div class="form-group">
-				<label for="endtime">End Time </label>
-				<input type="number" class="form-control" id="endtime" name="endtime" placeholder="Enter End Time">
-			</div>
-			<div class="form-group">
-				<input type="hidden" class="form-control" id="firstdayofweek" name="firstdayofweek" value="<%= firstdayofweek%>">
-			</div>
-			<!-- <div class="form-group">
-				<label for="date">Date</label>
-				<input type="text" class="form-control" id="date" name="date" placeholder="Date">
-			</div> -->
-			<button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-		
-		<script>
-			(function() {
-				window.addEventListener('load', function() {
-					var forms = [document.getElementById('html_form')];
-					var validation = Array.prototype.filter.call(forms, function(form) {
-						form.addEventListener('submit', check, false);
-					});
-				}, false);
-			})();
-		</script>
-  </body>
+		<!-- <div class="form-group">
+			<label for="uid">Driver ID</label>
+			<input type="text" class="form-control" id="uid" name="uid" placeholder="Enter Driver ID">
+		</div> -->
+		<!-- <div class="form-group">
+			<label for="date">Shift Date</label>
+			<input type="text" class="form-control" id="date" name="date" placeholder="Enter Shift Date">
+		</div> -->
+		<div class="form-group">
+			<label for="starttime">Start Time </label>
+			<input type="number" class="form-control" id="starttime" name="starttime" placeholder="Enter Start Time">
+		</div>
+		<div class="form-group">
+			<label for="endtime">End Time </label>
+			<input type="number" class="form-control" id="endtime" name="endtime" placeholder="Enter End Time">
+		</div>
+		<div class="form-group">
+			<input type="hidden" class="form-control" id="firstdayofweek" name="firstdayofweek"
+				value="<%= firstdayofweek%>">
+		</div>
+		<!-- <div class="form-group">
+			<label for="date">Date</label>
+			<input type="text" class="form-control" id="date" name="date" placeholder="Date">
+		</div> -->
+		<button type="submit" class="btn btn-primary">Submit</button>
+		<li><a href="/shiftmanagement">Back to Shift Management Homepage</a></li>
+	</form>
+
+	<script>
+		(function () {
+			window.addEventListener('load', function () {
+				var forms = [document.getElementById('html_form')];
+				var validation = Array.prototype.filter.call(forms, function (form) {
+					form.addEventListener('submit', check, false);
+				});
+			}, false);
+		})();
+	</script>
+</body>
+
 </html>
