--- a/App/views/fdsmanager/shiftmanagement.ejs
+++ b/App/views/fdsmanager/shiftmanagement.ejs
@@ -26,7 +26,8 @@
     <h1>Shift Management Page</h1>
     <li><a href="/adddriverwws">Generate a WWS for a FT Driver</a></li>
     <li><a href="/addptwws">Generate a WWS for a PT Driver</a></li>
- 
+    <li><a href="/viewwws">View all Weekly Schedules Created</a></li>
+    
     <h6>Add Shift to existing schedule</h6>
     <h6>Check for scheduling violations</h6>
 
@@ -40,14 +41,13 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     
-    <h1> </h1>
-    <h1> </h1>
-    <h1> </h1>
+    <br></br>
+    <br></br>
+    
     <li><a href="/addshift">Create a new Shift</a></li>
     <h5>Dont create shifts from here, go into viewing all WWS then create by week</h5>
     <li><a href="/addwws">Generate a new WWS for All Drivers</a></li>
-    <li><a href="/viewwws">View all WWS</a></li>
-    <h5>Generate WWWS for Full Time Driver</h5>
+    
     
     
 
